Added social plugin

--- a/komunat/src/index.html
+++ b/komunat/src/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
+  <script defer src="https://use.fontawesome.com/releases/v5.4.1/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7" crossorigin="anonymous"></script>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
 
@@ -25,6 +26,7 @@
     }
   </script>
   <link rel="manifest" href="manifest.webmanifest">
+  <script async src="websocialshare.js"></script>
   <meta name="theme-color" content="#1976d2">
 </head>
 
