--- a/komunat/src/index.html
+++ b/komunat/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
-  <base href="/app/" />
+  <base href="/app" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
   <meta name="format-detection" content="telephone=no" />
