--- a/komunat/www/index.html
+++ b/komunat/www/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Komunat</title>
 
-  <base href="/app/" />
+  <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
   <meta name="format-detection" content="telephone=no" />
@@ -21,6 +21,6 @@
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.413045f488b5deef03fe.js"></script><script type="text/javascript" src="polyfills.21bca0986f043edfde10.js"></script><script type="text/javascript" src="cordova.be00a3c9f5babbb22844.js"></script><script type="text/javascript" src="main.56e0dde79727304bf557.js"></script></body>
+<script type="text/javascript" src="runtime.41edc85851b897aa1508.js"></script><script type="text/javascript" src="polyfills.21bca0986f043edfde10.js"></script><script type="text/javascript" src="cordova.be00a3c9f5babbb22844.js"></script><script type="text/javascript" src="main.56e0dde79727304bf557.js"></script></body>
 
 </html>
